# rodem_project_template

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  requirements.txt  requirements_workflow.txt  tasks.py
config/: acquire_data.yaml  plot.yaml  (+3 more)
{{ cookiecutter.repo_name }}/: .gitlab-ci.yml  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_workflow.txt  setup.sh  tasks.py
{{ cookiecutter.repo_name }}/config/: predict.yaml  train.yaml
{{ cookiecutter.repo_name }}/config/common/: default.yaml  private.yaml
{{ cookiecutter.repo_name }}/config/hydra/: default.yaml
{{ cookiecutter.repo_name }}/config/load_datamodule/: mnist.yaml
{{ cookiecutter.repo_name }}/config/plot_def/: paper.yaml  rocs.yaml
{{ cookiecutter.repo_name }}/configs/callbacks/: default.yaml
{{ cookiecutter.repo_name }}/configs/datamodule/: celeba.yaml
{{ cookiecutter.repo_name }}/configs/loggers/: default.yaml
{{ cookiecutter.repo_name }}/configs/model/: default.yaml
{{ cookiecutter.repo_name }}/configs/paths/: default.yaml
{{ cookiecutter.repo_name }}/configs/trainer/: default.yaml
{{ cookiecutter.repo_name }}/docker/: Dockerfile
{{ cookiecutter.repo_name }}/scripts/: onnx_export.py  predict.py  train.py
{{ cookiecutter.repo_name }}/src/digit_classification/: plotting.py
{{ cookiecutter.repo_name }}/src/model_indep_unfolding/: cfg.py  plotting.py
{{ cookiecutter.repo_name }}/workflow/: experiment_config.yaml  main.smk  sweep.smk
{{ cookiecutter.repo_name }}/workflow/config/: main.yaml  sweep.yaml
(+120 files in other folders)
