[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "model_indep_unfolding"
description = "Model independent unfolding"
readme = "README.md"
version = "0.0.1"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
