[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "digit_classification"
description = "RODEM Project Template"
readme = "README.md"
version = "0.0.1"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["digit_classification"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
